# IssueCreator

./: CMakeLists.txt  README.en.md  README.md  gitee_api.cpp  gitee_api.h  github_api.cpp  github_api.h  issue-creator.sh  main.cpp  sqlcipher_wrapper.cpp  sqlcipher_wrapper.h
bash_completion/: issue-creator-completion.sh
